# wugong-email

./: .coverage  .gitignore  CHANGELOG.md  CLI_REFERENCE.md  DEVELOPER.md  README.md  cache.db  cli.py  config.py  crypto_utils.py  install.ps1  install.sh  logger.py  mail_manager.py  main.py  oauth2.py  pyproject.toml  pytest.ini  read_config.py  requirements.txt  schedule.py  skill.json  skill.md  test_debug_output.txt  test_fail.txt  test_fail_2.txt  test_output.txt  uninstall.ps1  uninstall.sh  update.ps1  update.sh  upgrade.ps1  upgrade.sh  wizard.py  wugong  wugong.bat
cli/: configure.py  maintain.py  render.py
cli/commands/: __init__.py  account.py  delete.py  folder.py  list.py  read.py  send.py  sync.py
mail/: __init__.py  auth.py  authenticator.py  connector.py  deleter.py  folder_manager.py  lister.py  manager.py  parser.py  reader.py  sender.py  storage.py  storage_manager.py  synchronizer.py
tests/: conftest.py  test_utils.py
tests/integration/: test_account.py  test_configure.py  test_delete.py  test_folder.py  test_hybrid_sync.py  test_init.py  test_list.py  test_password_requirements.py  test_read.py  test_real_accounts.py  test_send.py  test_sync.py  test_uninstall.py  test_upgrade.py  test_version.py  test_workflow.py
tests/integration/real_account/: test_cli_commands.py
tests/integration/virtual_server/: test_sync_logic.py
tests/unit/: test_auth.py  test_cli.py  test_config.py  test_crypto_utils.py  test_logger.py  test_main.py  test_reader.py  test_storage.py
tests/unit/cli/: test_configure.py  test_maintain.py  test_render.py
(+9 files in other folders)
